changes since 2.9.11:
	- ldap updates
		no longer sends entire reverse zone with AXFR
	- SRV fixes for zonefiles (Christof Meerwald)
	- gpgsql no longer reports as gmysql (Sherwin Daganoto)
	- we now understand 0.0.0.0/0
	- report more exactly what we bind to (don't trust gethostbyname)
	- removed only-soa hackery (noticed by Norbert Sendetzky)
	- added --version
	- clean up some parameter descriptions
	- cleanups by Norbert (getAuth moved to chopOff, arguments 'contains' massive cleanup)
	- improved reporting to which addresses we bind (now always mentions
	  IP addresses)
	- added delegation-only feature (thanks to ISC)
	- some Debian fixes
	- pdns_recursor does not try to resolve its own IP addresses anymore
	- pdns_recursor has gained an init.d script
	- sqlite support from 
	- bindbackend2 gains supermaster support (Mark Bergsma), untested
	- slave communicator more robust against misconfiguration (empty
	  master field)	
	- postgresql backend gains error checking support
//	- soa serial autocalculation now also honours soa-serial-offset (Steve Sobol)
	- we now shuffle answers 

changes since 2.9.10:
	- pdns_recursor now cleans its cache
	- pdns_recursor writes its pid to disk now (FreeBSD port maintainer)
	- disable-axfr check was reversed (oops)
	- LDAP now supports AXFR and a default TTL
	- some debugging output messed up the working of pdns_control (Mark Bergsma)
	- updates to axfr --help output (Norbert Sendetzky)
	
Changes since 2.9.8:
	- fixed a crash when adding additional records
	- make Notifications jump in front of the queue, allowing for
		speedier updates (suggested by Mark Jeftovic of EasyDNS)

	- gid/uid logging confusion (Dean Mills)
	- DNS TTLs were random values
	- OpenLDAP 2.1 fix
	- Error handling for invalid MX records
	- Better exception handling
	- Rewritten lookup() code                                                     

Changes since 2.9.7:
	- NS queries for zones we are not authoritative about now get their NS