@@ -1,3 +1,13 @@
+changes since 2.9.12:
+	- pdns_recursor can now survive being disconnected from the net for long
+	  enough to expire the entire root
+	- pdns_recursor now also jumbles answers (it did that already, I
+	  just didn't know it)
+	- big LDAP cleanup	
+	- LDAP now has TLS support
+	- Opteron support (opteron login by jeffdavey@submersion.com)
+
+
 changes since 2.9.11:
 	- ldap updates
 		no longer sends entire reverse zone with AXFR
